# SmartIDReader-Server-SDK

./: README.md
doc/: README.html  WHATSNEW.txt  gcc_version.txt  ldd_version.txt  linux_version.txt
include/smartIdEngine/: smartid_common.h  smartid_engine.h  smartid_result.h
samples/cpp/: build_cpp.sh  smartid_sample.cpp
samples/php/: CMakeLists.txt  README.txt  base64.txt  build_php.sh  common_std_template.i  php.ini  phpSmartIdEngine.i  smartIdEngine.i  smartid_sample.php
samples/python/: CMakeLists.txt  README.txt  build_python.sh  common_ignore.i  smartIdEngine.i  smartid_sample.py
